# crawl4ai

./: BEST_PRACTICES.md  DEPLOYMENT-GUIDE.md  Dockerfile.dynamodb-init  MIGRATION_COMPLETE.md  README-DynamoDB.md  docker-compose.aws.yml  pyproject.toml  requirements.txt  setup_dynamodb_table.py  test_backend_only.py  test_dkplus_ingestion.py  test_dynamodb_simple.py
crawl4ai/: __init__.py  async_crawler_strategy.py  async_database.py  async_webcrawler.py  async_webcrawler_dynamodb.py  dynamodb_manager.py  enhanced_crawler.py  hybrid_database_manager.py  mcp_server_dynamodb.py
crawl4ai/backends/: __init__.py  dynamodb.py  factory.py  mem0.py
examples/: enhanced_crawler_example.py
scripts/: init-dynamodb.py  live_test.py  migrate-to-dynamodb.py  migrate_sqlite_to_dynamodb.py  test-dynamodb-integration.py  test_dynamodb_migration.py
