[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl4ai"
version = "0.1.0"
description = "A web crawler for AI applications"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4==4.13.4",
    "lxml==5.4.0",
    "playwright==1.52.0",
    "playwright-stealth==1.0.6",
    "xxhash==3.5.0",
    "aiofiles==24.1.0",
    "aiosqlite==0.21.0",
    "rank_bm25==0.2.2",
    "snowballstemmer==3.0.1",
    "fake-useragent==2.2.0",
    "pyOpenSSL==25.1.0",
    "boto3",
    "aioboto3",
    "tqdm",
    "multidict==6.0.5",
    "aiohttp==3.9.5",
    "requests",
    "rich",
    "Pillow",
    "psutil",
    "setuptools",
    "chardet"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawl4ai*"]
exclude = ["tests*"]

[project.scripts]
crawl4ai-setup = "crawl4ai.install:post_install"
